# plotlyMol

./: .git_config.template.json  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  demo_visualizations.py  environment.yml  gui_app.py  launch_app.bat  launch_app.vbs  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  stop_app.bat  stop_app.vbs
.github/workflows/: docs.yml  lint.yml  publish.yml  security.yml  test.yml
3D/: test.py
docs/: CI_TROUBLESHOOTING_SUMMARY.md  PERFORMANCE_TESTING_GUIDE.md  ROADMAP.md  VIBRATION_FEATURE_SUMMARY.md  about.md  contributing.md  index.md  installation.md  quickstart.md
docs/api/: core.md  index.md  orbitals.md  properties.md
docs/examples/: index.md
docs/tutorials/: index.md
docs/user-guide/: basic-usage.md  input-formats.md
examples/: demo_visualizations.py  gui_app.py  performance_benchmarking.ipynb  vibration_analysis_advanced.ipynb  vibration_visualization_basics.ipynb
plotlymol3d/: Cube_to_Blender v3.py  __init__.py  atomProperties.py  cube.py  plotlyMol3D.py  test.py
src/plotlymol3d/: __init__.py  app.py  atomProperties.py  cube.py  plotlyMol3D.py  test.py  vibrations.py
tests/: __init__.py  conftest.py  test_input_processing.py  test_performance.py  test_vibrations.py  test_visualization.py
tests/fixtures/: water.molden  water_orca.out
