[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotlymol"
version = "0.1.0"
description = "A package to create interactive molecular visualizations using Plotly"
readme = "README.md"
authors = [
    {name = "Jonathan Schultz", email = "jonathanschultzNU@users.noreply.github.com"},
    {name = "Benjamin Lear"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "plotly>=5.0.0",
    "numpy>=1.20.0",
    "rdkit>=2022.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jonathanschultzNU/plotlyMol"
Repository = "https://github.com/jonathanschultzNU/plotlyMol"
Issues = "https://github.com/jonathanschultzNU/plotlyMol/issues"

[tool.setuptools]
packages = ["plotlymol3d"]

[tool.setuptools.package-data]
plotlymol3d = ["*.cube", "*.mol", "*.pdb", "*.xyz"]
